Fix z-index for reply button in Intros

--- a/src/app/main/nails/list-item.less
+++ b/src/app/main/nails/list-item.less
@@ -181,6 +181,7 @@
     position: absolute;
     left: 50%;
     margin-left: -39px;
+    z-index: 32; //rise above the right float thingy
     span {
       display: none;
     }
